Added restServer to rpcservers.conf

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -19,6 +19,10 @@ jsonrpcServer = true
 # Default: false
 webServer = true
 
+# Enable Homegear's REST server on this port
+# Default: false
+restServer = true
+
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
@@ -77,6 +81,10 @@ jsonrpcServer = true
 # Enable Homegear's build-in web server on this port
 # Default: false
 webServer = true
+
+# Enable Homegear's REST server on this port
+# Default: false
+restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
@@ -142,6 +150,10 @@ jsonrpcServer = true
 # Default: false
 webServer = true
 
+# Enable Homegear's REST server on this port
+# Default: false
+restServer = true
+
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
@@ -204,6 +216,10 @@ validUsers = homegear
 # Default: false
 #webServer = true
 
+# Enable Homegear's REST server on this port
+# Default: false
+#restServer = true
+
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 #contentPath = /var/lib/homegear/www
@@ -255,6 +271,10 @@ validUsers = homegear
 # Enable Homegear's build-in web server on this port
 # Default: false
 #webServer = true
+
+# Enable Homegear's REST server on this port
+# Default: false
+#restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
