mqtt fixes for IBM Bluemix Watson IOT Platform

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -16,12 +16,36 @@ brokerPort = 1883
 # Name of this client.
 clientName = Homegear
 
+# IBM Bluemix Watson IOT platform settings
+# Uses bmx*, retain, processingThreadCount and TLS settings, all others are skipped. Please note that it was tested without TSL encryption only. 
+# bmxTopix - enables IBM Bluemix adapter and blocks all other topic types as IBM Bluemix Watson IOT Platform disconnects when unsupported packet types appears
+bmxTopic = false
+# for IBM Bluemix Watson IOT Platform use <orgId>.messaging.internetofthings.ibmcloud.com
+bmxHostname=<orgId>.messaging.internetofthings.ibmcloud.com
+# port for MQTT  broker
+bmxPort = 1883
+# bmxOrgId - set this to Your orgId created in Bluemix
+bmxOrgId    = orgId
+# bmxGwTypeId - set this to Your gateway typeId created in Bluemix. This has to be created as "gateway type", not "device type"
+bmxGwTypeId   = gwTypeId
+# bmxDevTypeId - this sets the deviceId for devices created by MQTT adapter in Bluemix. Requested device type is created automatically by IOT platform.
+bmxDevTypeId   = devTypeId
+# bmxPrefix - should be set to "iot-2/type"
+bmxPrefix   = iot-2/type
+# bmxUsername - set to use-token-auth
+bmxUsername = use-token-auth
+# bmxToken - set to token generated for this gateway
+bmxToken = myBluemixToken
+#IBM Bluemix Watson IOT platform settings ends
+
+
 # The prefix to use. Every topic starts with this prefix.
 # Default: homegear
 prefix = homegear
 
 # Unique ID of this Homegear instance. Change this, have you have multiple
 # Homegear installations.
+# This is not used for IBM Bluemix Watson IOT platform
 homegearId = 1234-5678-9abc
 
 # Tells the MQTT server to retain received MQTT messages. New clients will then
@@ -50,6 +74,8 @@ jsonTopic = true
 # Enable topic: homegear/HOMEGEAR_ID/jsonobj/PEERID/CHANNEL/VARIABLE_NAME
 # Puts the value into a JSON object. The key is value: { "value": 43.7 }.
 jsonobjTopic = true
+
+
 
 
 ### TLS options ###
