--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -17,11 +17,11 @@ brokerPort = 1883
 clientName = Homegear
 
 # IBM Bluemix Watson IOT platform settings
-# Uses bmx*, retain, processingThreadCount and TLS settings, all others are skipped. Please note that it was tested without TSL encryption only. 
+# Uses bmx*, retain, processingThreadCount and TLS settings, all others are skipped. Please note that it was tested without TSL encryption only.
 # bmxTopix - enables IBM Bluemix adapter and blocks all other topic types as IBM Bluemix Watson IOT Platform disconnects when unsupported packet types appears
 bmxTopic = false
-# for IBM Bluemix Watson IOT Platform use <orgId>.messaging.internetofthings.ibmcloud.com
-bmxHostname=<orgId>.messaging.internetofthings.ibmcloud.com
+# for IBM Bluemix Watson IOT Platform use messaging.internetofthings.ibmcloud.com, do not add the <orgId> at the beginning
+bmxHostname=messaging.internetofthings.ibmcloud.com
 # port for MQTT  broker
 bmxPort = 1883
 # bmxOrgId - set this to Your orgId created in Bluemix
@@ -32,7 +32,7 @@ bmxGwTypeId   = gwTypeId
 bmxDevTypeId   = devTypeId
 # bmxPrefix - should be set to "iot-2/type"
 bmxPrefix   = iot-2/type
-# bmxUsername - set to use-token-auth
+# bmxUsername - set to use-token-auth if using token authentication
 bmxUsername = use-token-auth
 # bmxToken - set to token generated for this gateway
 bmxToken = myBluemixToken
