--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -16,29 +16,6 @@ brokerPort = 1883
 # Name of this client.
 clientName = Homegear
 
-# IBM Bluemix Watson IOT platform settings
-# Uses bmx*, retain, processingThreadCount and TLS settings, all others are skipped. Please note that it was tested without TSL encryption only.
-# bmxTopix - enables IBM Bluemix adapter and blocks all other topic types as IBM Bluemix Watson IOT Platform disconnects when unsupported packet types appears
-bmxTopic = false
-# for IBM Bluemix Watson IOT Platform use messaging.internetofthings.ibmcloud.com, do not add the <orgId> at the beginning
-bmxHostname=messaging.internetofthings.ibmcloud.com
-# port for MQTT  broker
-bmxPort = 1883
-# bmxOrgId - set this to Your orgId created in Bluemix
-bmxOrgId    = orgId
-# bmxGwTypeId - set this to Your gateway typeId created in Bluemix. This has to be created as "gateway type", not "device type"
-bmxGwTypeId   = gwTypeId
-# bmxDevTypeId - this sets the deviceId for devices created by MQTT adapter in Bluemix. Requested device type is created automatically by IOT platform.
-bmxDevTypeId   = devTypeId
-# bmxPrefix - should be set to "iot-2/type"
-bmxPrefix   = iot-2/type
-# bmxUsername - set to use-token-auth if using token authentication
-bmxUsername = use-token-auth
-# bmxToken - set to token generated for this gateway
-bmxToken = myBluemixToken
-#IBM Bluemix Watson IOT platform settings ends
-
-
 # The prefix to use. Every topic starts with this prefix.
 # Default: homegear
 prefix = homegear
@@ -76,8 +53,6 @@ jsonTopic = true
 jsonobjTopic = true
 
 
-
-
 ### TLS options ###
 
 # Set to "true" to enable SSL encryption for MQTT.
@@ -99,3 +74,34 @@ enableSSL = false
 
 # The path to the PEM encoded client keyfile.
 #keyPath = /etc/homegear/mqtt.key
+
+
+### IBM Bluemix Watson IOT platform settings ###
+
+# Uses bmx*, retain, processingThreadCount and TLS settings, all others are skipped. Please note that it was tested without TLS encryption only.
+# bmxTopix enables IBM Bluemix adapter and blocks all other topic types as IBM Bluemix Watson IOT Platform disconnects when unsupported packet types appear
+#bmxTopic = false
+
+# For IBM Bluemix Watson IOT Platform use messaging.internetofthings.ibmcloud.com, do not add the <orgId> at the beginning
+#bmxHostname=messaging.internetofthings.ibmcloud.com
+
+# Port for MQTT broker
+#bmxPort = 1883
+
+# Set this to your orgId created in Bluemix
+#bmxOrgId = orgId
+
+# Set this to your gateway typeId created in Bluemix. This has to be created as "gateway type", not "device type"
+#bmxGwTypeId = gwTypeId
+
+# This sets the device ID for devices created by MQTT adapter in Bluemix. Requested device type is created automatically by IOT platform.
+#bmxDevTypeId = devTypeId
+
+# Should be set to "iot-2/type"
+#bmxPrefix = iot-2/type
+
+# Set to use-token-auth if using token authentication
+#bmxUsername = use-token-auth
+
+# Set to token generated for this gateway
+#bmxToken = myBluemixToken
