Added watchdog to flows and script engine clients

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -298,6 +298,10 @@ scriptEngineThreadCount = 5
 # Default: scriptEngineServerMaxConnections = 10
 scriptEngineServerMaxConnections = 10
 
+# When the scriptengine queues hang for this amount of time (in milliseconds), the process is killed.
+# Default: scriptEngineWatchdogTimeout = -1
+scriptEngineWatchdogTimeout = 60000
+
 # Default: flowsProcessingThreadCountServer = 10
 flowsProcessingThreadCountServer = 5
 
@@ -309,6 +313,10 @@ flowsServerMaxConnections = 50
 
 # Default: maxNodeThreadsPerProcess = 40
 maxNodeThreadsPerProcess = 60
+
+# When the flows queues hang for this amount of time (in milliseconds), the process is killed.
+# Default: flowsWatchdogTimeout = -1
+flowsWatchdogTimeout = 60000
 
 # Default: ipcThreadCount = 10
 ipcThreadCount = 5
