Added UPnP description in main.conf

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -94,7 +94,7 @@ databaseMaxBackups = 10
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
-# Enable 
+# Enable UPnP server for other devices to be able to discover this installation of Homegear
 # Default: enableUPnP = true
 enableUPnP = true
 
