Added setting for manual client process start

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -302,6 +302,10 @@ scriptEngineServerMaxConnections = 10
 # Default: scriptEngineWatchdogTimeout = -1
 scriptEngineWatchdogTimeout = 60000
 
+# Set to true to debug the script engine client process with Valgrind.
+# Default: scriptEngineManualClientStart = false
+scriptEngineManualClientStart = false
+
 # Default: flowsProcessingThreadCountServer = 10
 flowsProcessingThreadCountServer = 5
 
@@ -317,6 +321,10 @@ maxNodeThreadsPerProcess = 60
 # When the flows queues hang for this amount of time (in milliseconds), the process is killed.
 # Default: flowsWatchdogTimeout = -1
 flowsWatchdogTimeout = 60000
+
+# Set to true to debug the flows client process with Valgrind.
+# Default: flowsManualClientStart = false
+flowsManualClientStart = false
 
 # Default: ipcThreadCount = 10
 ipcThreadCount = 5
