--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -233,6 +233,12 @@ validUsers = homegear
 # Default: contentPathGroup =
 # contentPathGroup = homegear
 
+# Enable Homegear's build-in WebSocket server on this port
+# WARNING: Enabling Websockets without authentication is a high security risk!
+# So make sure, webSocketAuthType is not set to none!
+# Default: false
+#webSocket = true
+
 # Set ssl to "true" to enable SSL support
 #ssl = false
 
@@ -288,6 +294,12 @@ validUsers = homegear
 
 # Default: contentPathGroup =
 # contentPathGroup = homegear
+
+# Enable Homegear's build-in WebSocket server on this port
+# WARNING: Enabling Websockets without authentication is a high security risk!
+# So make sure, webSocketAuthType is not set to none!
+# Default: false
+#webSocket = true
 
 # Set ssl to "true" to enable SSL support
 #ssl = true
