Started redirect for admin UI and UI

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -217,6 +217,32 @@ nodeBlueDataPath = /var/lib/homegear/node-blue/data
 # disable it if you finished setting up your logic.
 nodeBlueDebugOutput = true
 
+# Path where Admin UI is located.
+# Default: adminUiPath = /var/lib/homegear/admin-ui
+adminUiPath = /var/lib/homegear/admin-ui
+
+# Default: adminUiPathPermissions = 770
+# adminUiPathPermissions = 770
+
+# Default: adminUiPathUser =
+# adminUiPathUser = homegear
+
+# Default: adminUiPathGroup =
+# adminUiPathGroup = homegear
+
+# Path where UI is located.
+# Default: uiPath = /var/lib/homegear/ui
+uiPath = /var/lib/homegear/ui
+
+# Default: uiPathPermissions = 770
+# uiPathPermissions = 770
+
+# Default: uiPathUser =
+# uiPathUser = homegear
+
+# Default: uiPathGroup =
+# uiPathGroup = homegear
+
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
 modulePath = /var/lib/homegear/modules
