Added CLI command "groups restore" and setting "waitForCorrectTime"

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -299,6 +299,11 @@ replaceClientServerAddress = http://127.0.0.1:9292/bidcos http://$REMOTEIP:9292/
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 
+# When set to "true" Homegear waits for NTP to set the correct time. The check tests, if the unix time stamp is less
+# than 1000000000.
+# Default: waitForCorrectTime = true
+waitForCorrectTime = true
+
 # Default: prioritizeThreads = true
 prioritizeThreads = true
 
