Moved certificate settings to rpcservers.conf

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -123,11 +123,18 @@ authType = none
 # Default: webSocketAuthType = session
 webSocketAuthType = session
 
-# The size in bit of the temporary Diffie-Hellman parameters generated at start up.
-# This setting is ignored when Diffie-Hellman parameters are read from file.
-# Should be >= 1024 bit.
-# Default: diffieHellmanKeySize = 1024
-diffieHellmanKeySize = 1024
+# Needed for client certificate login
+# Default: caPath = /etc/homegear/homegearca.crt
+caPath = /etc/homegear/ca/cacert.pem
+
+# Default: certPath = /etc/homegear/homegear.crt
+certPath = /etc/homegear/homegear.crt
+
+# Default: keyPath = /etc/homegear/homegear.key
+keyPath = /etc/homegear/homegear.key
+
+# Default: dhParamPath = /etc/homegear/dh1024.pem
+dhParamPath = /etc/homegear/dh1024.pem
 
 [RPCServer3]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -190,11 +197,18 @@ authType = basic
 # Default: webSocketAuthType = session
 webSocketAuthType = session
 
-# The size in bit of the temporary Diffie-Hellman parameters generated at start up.
-# This setting is ignored when Diffie-Hellman parameters are read from file.
-# Should be >= 1024 bit.
-# Default: diffieHellmanKeySize = 1024
-diffieHellmanKeySize = 1024
+# Needed for client certificate login
+# Default: caPath = /etc/homegear/homegearca.crt
+caPath = /etc/homegear/ca/cacert.pem
+
+# Default: certPath = /etc/homegear/homegear.crt
+certPath = /etc/homegear/homegear.crt
+
+# Default: keyPath = /etc/homegear/homegear.key
+keyPath = /etc/homegear/homegear.key
+
+# Default: dhParamPath = /etc/homegear/dh1024.pem
+dhParamPath = /etc/homegear/dh1024.pem
 
 # Comma separated list of user names created with Homegear's CLI.
 validUsers = homegear
@@ -320,11 +334,18 @@ validUsers = homegear
 # Default: webSocketAuthType = session
 #webSocketAuthType = session
 
-# The size in bit of the temporary Diffie-Hellman parameters generated at start up.
-# This setting is ignored when Diffie-Hellman parameters are read from file.
-# Should be >= 1024 bit.
-# Default: diffieHellmanKeySize = 1024
-#diffieHellmanKeySize = 1024
+# Needed for client certificate login
+# Default: caPath = /etc/homegear/homegearca.crt
+#caPath = /etc/homegear/ca/cacert.pem
+
+# Default: certPath = /etc/homegear/homegear.crt
+#certPath = /etc/homegear/homegear.crt
+
+# Default: keyPath = /etc/homegear/homegear.key
+#keyPath = /etc/homegear/homegear.key
+
+# Default: dhParamPath = /etc/homegear/dh1024.pem
+#dhParamPath = /etc/homegear/dh1024.pem
 
 # Comma separated list of user names created with Homegear's CLI.
 #validUsers = homegear
