Support for parallel basic and cert auth

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -45,8 +45,8 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = false
 
-# You can specify the authentication type your server uses here.
-# Can be one of the following:
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
 # - none: No authentication is required
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
@@ -60,6 +60,9 @@ authType = none
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
 webSocketAuthType = session
+
+# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+validGroups = 1
 
 [RPCServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -107,8 +110,8 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the authentication type your server uses here.
-# Can be one of the following:
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
 # - none: No authentication is required
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
@@ -135,6 +138,9 @@ keyPath = /etc/homegear/homegear.key
 
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 dhParamPath = /etc/homegear/dh1024.pem
+
+# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+validGroups = 1
 
 [RPCServer3]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -181,13 +187,13 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the authentication type your server uses here.
-# Can be one of the following:
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
 # - none: No authentication is required
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
 # Default: authType = cert
-authType = basic
+authType = basic, cert
 
 # You can specify the websocket authentication type here. Never ever use basic auth
 # over an unencrypted connection!
@@ -210,8 +216,8 @@ keyPath = /etc/homegear/homegear.key
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 dhParamPath = /etc/homegear/dh1024.pem
 
-# Comma separated list of user names created with Homegear's CLI.
-validUsers = homegear
+# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+validGroups = 1
 
 #[WebServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -256,8 +262,8 @@ validUsers = homegear
 # Set ssl to "true" to enable SSL support
 #ssl = false
 
-# You can specify the authentication type your server uses here.
-# Can be one of the following:
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
 # - none: No authentication is required
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
@@ -274,6 +280,9 @@ validUsers = homegear
 
 # Redirect HTTP requests to this address
 # redirectTo = https://myserver.com
+
+# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+#validGroups = 1
 
 #[WebServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -318,8 +327,8 @@ validUsers = homegear
 # Set ssl to "true" to enable SSL support
 #ssl = true
 
-# You can specify the authentication type your server uses here.
-# Can be one of the following:
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
 # - none: No authentication is required
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
@@ -347,5 +356,5 @@ validUsers = homegear
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 #dhParamPath = /etc/homegear/dh1024.pem
 
-# Comma separated list of user names created with Homegear's CLI.
-#validUsers = homegear
+# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+#validGroups = 1
