Enable asset caching in web server

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -61,6 +61,11 @@ authType = none
 # Default: webSocketAuthType = session
 webSocketAuthType = session
 
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
+
 # Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
 validGroups = 1
 
@@ -139,6 +144,11 @@ keyPath = /etc/homegear/homegear.key
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 dhParamPath = /etc/homegear/dh1024.pem
 
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
+
 # Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
 validGroups = 1
 
@@ -216,6 +226,11 @@ keyPath = /etc/homegear/homegear.key
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 dhParamPath = /etc/homegear/dh1024.pem
 
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
+
 # Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
 validGroups = 1
 
@@ -277,6 +292,11 @@ validGroups = 1
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
 #webSocketAuthType = session
+
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
 
 # Redirect HTTP requests to this address
 # redirectTo = https://myserver.com
@@ -355,6 +375,11 @@ validGroups = 1
 
 # Default: dhParamPath = /etc/homegear/dh1024.pem
 #dhParamPath = /etc/homegear/dh1024.pem
+
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
 
 # Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
 #validGroups = 1
