--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -249,6 +249,20 @@ lockFilePathUser = homegear
 # Default: lockFilePathGroup =
 lockFilePathGroup = homegear
 
+# Path to certificate for signing OAuth data. This is used to avoid the necessity to store the OAuth keys in Homegear's database
+# Default: oauthCertPath = /etc/homegear/homegear.crt
+oauthCertPath = /etc/homegear/homegear.crt
+
+# Path to certificate to verify OAuth signatures
+# Default: oauthKeyPath = /etc/homegear/homegear.key
+oauthKeyPath = /etc/homegear/homegear.key
+
+# The number of seconds an OAuth token is valid. After this amount of time it needs to be refreshed.
+oauthTokenLifetime = 3600
+
+# The number of seconds an OAuth refresh token is valid.
+oauthRefreshTokenLifetime = 5184000
+
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
 # To redirect communication to a client's XML RPC event server through a
