--- a/debian/rules
+++ b/debian/rules
@@ -49,8 +49,8 @@ override_dh_auto_install:
 	find $(CURDIR)/debian/homegear/var/lib/homegear -type f -exec chmod 440 {} \;
 	chmod 755 $(CURDIR)/debian/homegear/var/lib/homegear/scripts/*.sh
 
-	mkdir -p $(CURDIR)/debian/homegear/usr/share/homegear
-	cp -R /usr/share/homegear/php/ $(CURDIR)/debian/homegear/usr/share/homegear
+	mkdir -p $(CURDIR)/debian/homegear/usr/share/homegear/php
+	cp -R /usr/share/homegear/php-dev/* $(CURDIR)/debian/homegear/usr/share/homegear/php
 	rm -f $(CURDIR)/debian/homegear/usr/share/homegear/php/*/*.a
 	chown -R root:root $(CURDIR)/debian/homegear/usr/share/homegear
 	find $(CURDIR)/debian/homegear/usr/share/homegear -type d -exec chmod 555 {} \;
