Implemented setting writeableDataPach

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -51,6 +51,20 @@ dataPath = /var/lib/homegear
 # Default: dataPathGroup =
 # dataPathGroup = homegear
 
+# If writeableDataPath is empty, dataPath is used. Use this setting, if dataPath is not writeable. Homegear then writes
+# files to this location when needed.
+# Default: writeableDataPath = <dataPath>
+# writeableDataPath = /data/homegear-data
+
+# Default: writeableDataPathPermissions = 770
+# writeableDataPathPermissions = 770
+
+# Default: writeableDataPathUser =
+# writeableDataPathUser = homegear
+
+# Default: writeableDataPathGroup =
+# writeableDataPathGroup = homegear
+
 # Family data is stored here.
 # Default: familyDataPath = <executable path>/families
 familyDataPath = /var/lib/homegear/families
