--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,14 @@ set(SOURCE_FILES
         src/FamilyModules/FamilyModuleInfo.h
         src/FamilyModules/SharedObjectFamilyModules.cpp
         src/FamilyModules/SharedObjectFamilyModules.h
+        src/FamilyModules/SocketCentral.cpp
+        src/FamilyModules/SocketCentral.h
+        src/FamilyModules/SocketDeviceFamily.cpp
+        src/FamilyModules/SocketDeviceFamily.h
+        src/FamilyModules/SocketFamilyModules.cpp
+        src/FamilyModules/SocketFamilyModules.h
+        src/FamilyModules/SocketPeer.cpp
+        src/FamilyModules/SocketPeer.h
         src/Node-BLUE/FlowInfoClient.h
         src/Node-BLUE/FlowInfoServer.h
         src/Node-BLUE/NodeBlueClient.cpp
