--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -207,6 +207,18 @@ nodeBlueDataPath = /var/lib/homegear/node-blue/data
 # disable it if you finished setting up your logic.
 nodeBlueDebugOutput = true
 
+# Only used when "nodeBlueDebugOutput" is set to "true". Above this number of debug events (per 10 seconds), nodes are
+# not highlighted anymore.
+nodeBlueEventLimit1 = 100
+
+# Only used when "nodeBlueDebugOutput" is set to "true". Above this number of debug events (per 10 seconds), the last
+# output of a node is not displayed anymore.
+nodeBlueEventLimit2 = 300
+
+# Only used when "nodeBlueDebugOutput" is set to "true". Above this number of debug events (per 10 seconds), no events
+# are sent anymore. This also disables the output of "debug" nodes.
+nodeBlueEventLimit3 = 400
+
 # Path where Admin UI is located.
 # Default: adminUiPath = /var/lib/homegear/admin-ui
 adminUiPath = /var/lib/homegear/admin-ui/public
