--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -19,6 +19,10 @@ memoryDebugging = true
 # Default: devLog = false
 devLog = false
 
+# Logs all IPC communication to a PCAP file
+# Default: ipcLog = false
+ipcLog = false
+
 # Set to false to disable core dumps. Currently to make fixing errors easier, core dumps are enabled by default.
 # Default: enableCoreDumps = true
 enableCoreDumps = true
