Disabled family RPC server by default

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -1,28 +1,28 @@
-[FamilyRPCServer]
+#[FamilyRPCServer]
 
 # Enable Family RPC server. If you want to listen on other addresses than
 # localhost, you need to enable SSL and authentication. Otherwise the server
 # won't start. WebSocket, Webserver and REST server are disabled.
-familyServer = true
+#familyServer = true
 
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: interface = ::
-interface = ::1
+#interface = ::1
 
 # The port number to bind the RPC server to. This setting is mandatory.
-port = 2000
+#port = 2000
 
 # Enable Homegear's XML-RPC and binary RPC server on this port. 
 # Default: true
-xmlrpcServer = true
+#xmlrpcServer = true
 
 # Enable Homegear's JSON-RPC server on this port. 
 # Default: true
-jsonrpcServer = true
+#jsonrpcServer = true
 
 # Set ssl to "true" to enable SSL support
-ssl = false
+#ssl = false
 
 # You can specify the authentication types you want to enable here.
 # Can be one or more of the following (seperated by ","):
@@ -30,10 +30,10 @@ ssl = false
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
 # Default: authType = cert
-authType = none
+#authType = none
 
 # Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
-validGroups = 1
+#validGroups = 1
 
 [RPCServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
