Fixed: Roles of systemvariables are not returned by all RPC methods

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -255,6 +255,11 @@ uiPath = /var/lib/homegear/ui
 # Default: uiPathGroup =
 # uiPathGroup = homegear
 
+# Reads "defaultRoles.json" on start and recreates all roles in database. Disable this, if you want to create custom
+# roles.
+# Default: reloadRolesOnStartup = true
+reloadRolesOnStartup = true
+
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
 modulePath = /var/lib/homegear/modules
