Randomly generate MQTT client name when unset in config

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -13,7 +13,7 @@ brokerHostname = localhost
 # Port of your MQTT message broker.
 brokerPort = 1883
 
-# Name of this client.
+# Name of this client. When unset a random and unique client ID is generated.
 clientName = Homegear
 
 # The prefix to use. Every topic starts with this prefix.
