Added MQTT setting "qos"

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -25,6 +25,10 @@ prefix = homegear
 # This is not used for IBM Bluemix Watson IOT platform
 homegearId = 1234-5678-9abc
 
+# Quality of service. Only 0 (no qos) and 1 (sent/received at least once, recommended) are supported.
+# Default: qos = 1
+qos = 1
+
 # Tells the MQTT server to retain received MQTT messages. New clients will then
 # receive the last value of a topic on connection.
 # Variables of type "Action" are not retained.
