Make wait time for physical interfaces settable

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -447,3 +447,7 @@ eventThreadPriority = 0
 # Default: eventThreadPolicy = SCHED_OTHER
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
 eventThreadPolicy = SCHED_OTHER
+
+# Default: maxWaitForPhysicalInterfaces = 180
+# The maximum time to wait for physical interfaces (= communication modules) on startup in seconds.
+maxWaitForPhysicalInterfaces = 180
